--- a/CSS/hacker.css
+++ b/CSS/hacker.css
@@ -8,11 +8,11 @@ body, h1, p {
     margin: 0;
     padding: 0;
     font-family: Consolas, monospace;
-    color: #000000;
+    color: #ffffff;
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #000000;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -83,7 +83,7 @@ footer {
 .arrow {
     text-align: center;
     font-size: 48px;
-    color: #000000;
+    color: #ffffff;
     font-weight: bold;
     margin-top: auto;
     margin-bottom: auto;
@@ -114,7 +114,7 @@ footer {
 .divider {
     margin-top: 50px;
     margin-bottom: 50px;
-    border-bottom: 1px solid #8b8982;
+    border-bottom: 1px solid #ffffff;
 }
 
 .vertical-space {
@@ -134,7 +134,7 @@ nav {
 }
 
 nav a {
-    color: #000000;
+    color: #ffffff;
     font-weight: bold;
     text-decoration: none;
 }
@@ -144,13 +144,13 @@ h1 {
 }
 
 h3 {
-    color: #000000;
+    color: #ffffff;
 }
 
 ul {
     list-style-type: none;
     padding: 20px;
-    color: #000000;
+    color: #ffffff;
 }
 
 li {
@@ -163,7 +163,7 @@ li.folder::after {
     content: "/";
     position: absolute;
     left: 75px;
-    color: #000000;
+    color: #ffffff;
 }
 
 a,
@@ -175,7 +175,7 @@ li.folder:hover::after {
 
 li.current a, 
 li.folder.current::after, 
-.light-selected {
+.dark-selected {
     color: #40c9a2;
 }
 
@@ -210,7 +210,7 @@ li.current:hover::after {
     }
 
     main {
-        padding-right: 50px;
+        padding-right: 60px;
     }
 
     footer {
@@ -221,6 +221,7 @@ li.current:hover::after {
         min-height: 0vh;
         margin-top: 20px;
         padding-left: 0px;
+        padding-right: 100px;
     }
 
     .title {
@@ -250,6 +251,7 @@ li.current:hover::after {
     }
 
     .arrow {
+        font-size: 36px;
         margin-left: 15px;
         margin-right: 15px;
     }
@@ -259,12 +261,16 @@ li.current:hover::after {
 /* Mobile: */
 @media only screen and (max-width: 768px) {
 
+    body, header, main, footer, nav, ul, li, a {
+        transition: none;
+    }
+
     body {
         overflow-x: hidden;
     }
 
     body.show {
-        background-image: linear-gradient(to right, #000000 67%, rgba(0,0,0,0) 20%); 
+        background-image: linear-gradient(to right, #ffffff 67%, rgba(0,0,0,0) 20%); 
     }
 
     .desktop {
@@ -277,8 +283,7 @@ li.current:hover::after {
 
     header {
         width: 100%;
-        background-color: #ffffff;
-        transition: none;
+        background-color: #000000;
         padding-top: 10px;
         padding-left: 10px;
         padding-bottom: 3px;
@@ -286,7 +291,7 @@ li.current:hover::after {
     }
 
     header.show {
-        background-image: linear-gradient(to right, #000000 calc(67% - 5px), rgba(0,0,0,0) 20%); 
+        background-image: linear-gradient(to right, #ffffff calc(67% - 5px), rgba(0,0,0,0) 20%); 
         border-bottom: 0px;
     }
 
@@ -310,7 +315,7 @@ li.current:hover::after {
     }
 
     footer.show { 
-        background-image: linear-gradient(to right, #000000 67%, rgba(0,0,0,0) 20%); 
+        background-image: linear-gradient(to right, #ffffff 67%, rgba(0,0,0,0) 20%); 
     }
 
     p {
@@ -348,7 +353,7 @@ li.current:hover::after {
         padding-top: 0px;
         margin-top: 67px;
         margin-bottom: 58px;
-        background-color: #000000;
+        background-color: #ffffff;
     }
 
     nav.show {
@@ -360,7 +365,7 @@ li.current:hover::after {
     }
 
     nav a, ul {
-        color: #ffffff;
+        color: #000000;
         font-size: 20px;
     }
 
@@ -368,7 +373,11 @@ li.current:hover::after {
         font-size: 20px;
         position: absolute;
         left: 100px;
-        color: #ffffff;
+        color: #000000;
+    }
+
+    .title-container {
+        padding-right: 0px;
     }
 
     .word {
@@ -389,7 +398,6 @@ li.current:hover::after {
         margin-bottom: 50px;
         margin-left: 15px;
         margin-right: 15px;
-        border-bottom: 1px solid #8b8982;
     }
 
     .about-image {
@@ -403,7 +411,6 @@ li.current:hover::after {
     }
 
     .arrow {
-        font-size: 36px;
         margin-left: 10px;
         margin-right: 10px;
     }
@@ -419,7 +426,11 @@ li.current:hover::after {
         z-index: 1;
     }
 
-    .hamburger {
+    .hamburgerlight {
+        display: none;
+    }
+
+    .hamburgerdark {
         max-height: 48px;
         max-width: 100%;
     }
@@ -430,7 +441,7 @@ li.current:hover::after {
 @media screen and (max-width: 540px) {
 
     header.show {
-        background-image: linear-gradient(to right, #000000 calc(67% - 6px), rgba(0,0,0,0) 20%); 
+        background-image: linear-gradient(to right, #ffffff calc(67% - 6px), rgba(0,0,0,0) 20%); 
     }
 
 }
@@ -439,7 +450,7 @@ li.current:hover::after {
 @media screen and (max-width: 375px) {
 
     header.show {
-        background-image: linear-gradient(to right, #000000 calc(67% - 7px), rgba(0,0,0,0) 20%); 
+        background-image: linear-gradient(to right, #ffffff calc(67% - 7px), rgba(0,0,0,0) 20%); 
     }
 
 }
@@ -460,7 +471,7 @@ li.current:hover::after {
     }
 
     header.show {
-        background-image: linear-gradient(to right, #000000 calc(67% - 7px), rgba(0,0,0,0) 20%);
+        background-image: linear-gradient(to right, #ffffff calc(67% - 7px), rgba(0,0,0,0) 20%);
     }
 
     footer {
